--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-VITE_SERVER_BASE_URL=http://localhost:3000/api/
-VITE_SOCKET_SERVER_BASE_URL=localhost:3000
+VITE_SERVER_BASE_URL=https://virtual-scoreboard-backend.onrender.com/api/
+VITE_SOCKET_SERVER_BASE_URL=virtual-scoreboard-backend.onrender.com
 
